--- a/templates/articles.html
+++ b/templates/articles.html
@@ -67,7 +67,7 @@
   
    <!-- <input style="width: 100%; height: 60%;" class="btn btn-primary" type="submit" id="btnClose" value="nombre " onclick="closeWindow();" /> -->
    </div>
-   <button    class="btn btn-success" type="button" onclick="filterWithAmount()" >Agregar Articulo</button>
+   <button    class="btn btn-success" type="button" onclick="AddItem()" >Agregar Articulo</button>
 
    <div style="width: 50%; display: flex;  align-items: center;" class="seccion">
 
@@ -135,9 +135,8 @@
     function AddItem(){
     var categoria = document.getElementById('categoriasInput').value 
     var nombre = document.getElementById('inputName').value 
-    var precio = document.getElementById('inputName').value 
-
-    window.location.replace(`/articles?categoria=${nombreValue}`)
+    var precio = document.getElementById('inputPrice').value 
+    window.location.replace(`/articles?inputName=${nombre}&categoriasInput=${categoria}&inputPrice=${precio}`)
 
     }
 </script>
